build/gen/yacc/c_grammar.output
État 15 conflits: 1 décalage/réduction


Grammaire

    0 $accept: axiom $end

    1 axiom: file

    2 file: preprocessor main EOFILE

    3 main: MAIN LBRACE instruction_list RBRACE

    4 preprocessor: %empty
    5             | PREPRODEFINE preprocessor

    6 instruction_block: instruction
    7                  | LBRACE instruction_list RBRACE

    8 instruction_list: instruction instruction_list
    9                 | %empty

   10 instruction: PRINTF SEMICOLON
   11            | RETURN expression SEMICOLON
   12            | declaration_list SEMICOLON
   13            | assignation_list SEMICOLON
   14            | control_flow
   15            | expression SEMICOLON
   16            | SEMICOLON

   17 control_flow: for
   18             | while
   19             | ifelse

   20 for: FOR LPARENTHESIS for_init SEMICOLON for_expr SEMICOLON for_expr RPARENTHESIS instruction_block

   21 for_init: declaration_list
   22         | assignation_list

   23 for_expr: expression
   24         | %empty

   25 while: WHILE LPARENTHESIS expression RPARENTHESIS instruction_block

   26 ifelse: if
   27       | if ELSE instruction_block

   28 if: IF LPARENTHESIS expression RPARENTHESIS instruction_block

   29 declaration_list: TYPE_INT declaration_list2
   30                 | TYPE_DOUBLE declaration_list2

   31 declaration_list2: declaration COMMA declaration_list2
   32                  | declaration

   33 declaration: ID
   34            | ID EQUAL expression
   35            | ID LBRACKET STATIC_INT RBRACKET
   36            | ID LBRACKET ID RBRACKET

   37 assignation_list: assignation COMMA assignation_list
   38                 | assignation

   39 assignation: ID EQUAL expression
   40            | ID LBRACKET expression RBRACKET EQUAL expression

   41 expression: or_expr

   42 or_expr: and_expr
   43        | or_expr OP_OR and_expr

   44 and_expr: equality_expr
   45         | and_expr OP_AND equality_expr

   46 equality_expr: comparison_expr
   47              | equality_expr OP_EQ comparison_expr
   48              | equality_expr OP_NEQ comparison_expr

   49 comparison_expr: addition_expr
   50                | comparison_expr OP_LOWER addition_expr
   51                | comparison_expr OP_LOWER_EQ addition_expr
   52                | comparison_expr OP_GREATER addition_expr
   53                | comparison_expr OP_GREATER_EQ addition_expr

   54 addition_expr: multiplication_expr
   55              | addition_expr OP_PLUS multiplication_expr
   56              | addition_expr OP_MINUS multiplication_expr

   57 multiplication_expr: prefix_op_expr
   58                    | multiplication_expr OP_MULTIPLY prefix_op_expr
   59                    | multiplication_expr OP_DIVIDE prefix_op_expr

   60 prefix_op_expr: postfix_op_expr
   61               | OP_PLUS prefix_op_expr
   62               | OP_MINUS prefix_op_expr
   63               | OP_INCREMENT prefix_op_expr
   64               | OP_DECREMENT prefix_op_expr
   65               | OP_NOT prefix_op_expr

   66 postfix_op_expr: primary_expr
   67                | postfix_op_expr LBRACKET expression RBRACKET
   68                | postfix_op_expr LPARENTHESIS call_arguments RPARENTHESIS
   69                | postfix_op_expr LPARENTHESIS RPARENTHESIS
   70                | postfix_op_expr OP_INCREMENT
   71                | postfix_op_expr OP_DECREMENT

   72 call_arguments: expression
   73               | call_arguments COMMA expression

   74 primary_expr: ID
   75             | static_value
   76             | LPARENTHESIS expression RPARENTHESIS

   77 static_value: STATIC_INT
   78             | STATIC_DOUBLE


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EOFILE (258) 2
TYPE_INT (259) 29
TYPE_DOUBLE (260) 30
STATIC_INT (261) 35 77
STATIC_DOUBLE (262) 78
ID (263) 33 34 35 36 39 40 74
OP_PLUS (264) 55 61
OP_MINUS (265) 56 62
OP_MULTIPLY (266) 58
OP_DIVIDE (267) 59
OP_INCREMENT (268) 63 70
OP_DECREMENT (269) 64 71
OP_EQ (270) 47
OP_NEQ (271) 48
OP_AND (272) 45
OP_OR (273) 43
OP_LOWER (274) 50
OP_LOWER_EQ (275) 51
OP_GREATER (276) 52
OP_GREATER_EQ (277) 53
OP_NOT (278) 65
MAIN (279) 3
RETURN (280) 11
IF (281) 28
ELSE (282) 27
WHILE (283) 25
FOR (284) 20
PREPRODEFINE (285) 5
PRINTF (286) 10
SEMICOLON (287) 10 11 12 13 15 16 20
COMMA (288) 31 37 73
EQUAL (289) 34 39 40
LPARENTHESIS (290) 20 25 28 68 69 76
RPARENTHESIS (291) 20 25 28 68 69 76
LBRACE (292) 3 7
RBRACE (293) 3 7
LBRACKET (294) 35 36 40 67
RBRACKET (295) 35 36 40 67
NO_ELSE (296)


Non-terminaux, suivis des règles où ils apparaissent

$accept (42)
    à gauche: 0
axiom (43)
    à gauche: 1, à droite: 0
file (44)
    à gauche: 2, à droite: 1
main (45)
    à gauche: 3, à droite: 2
preprocessor (46)
    à gauche: 4 5, à droite: 2 5
instruction_block (47)
    à gauche: 6 7, à droite: 20 25 27 28
instruction_list (48)
    à gauche: 8 9, à droite: 3 7 8
instruction (49)
    à gauche: 10 11 12 13 14 15 16, à droite: 6 8
control_flow (50)
    à gauche: 17 18 19, à droite: 14
for (51)
    à gauche: 20, à droite: 17
for_init (52)
    à gauche: 21 22, à droite: 20
for_expr (53)
    à gauche: 23 24, à droite: 20
while (54)
    à gauche: 25, à droite: 18
ifelse (55)
    à gauche: 26 27, à droite: 19
if (56)
    à gauche: 28, à droite: 26 27
declaration_list (57)
    à gauche: 29 30, à droite: 12 21
declaration_list2 (58)
    à gauche: 31 32, à droite: 29 30 31
declaration (59)
    à gauche: 33 34 35 36, à droite: 31 32
assignation_list (60)
    à gauche: 37 38, à droite: 13 22 37
assignation (61)
    à gauche: 39 40, à droite: 37 38
expression (62)
    à gauche: 41, à droite: 11 15 23 25 28 34 39 40 67 72 73 76
or_expr (63)
    à gauche: 42 43, à droite: 41 43
and_expr (64)
    à gauche: 44 45, à droite: 42 43 45
equality_expr (65)
    à gauche: 46 47 48, à droite: 44 45 47 48
comparison_expr (66)
    à gauche: 49 50 51 52 53, à droite: 46 47 48 50 51 52 53
addition_expr (67)
    à gauche: 54 55 56, à droite: 49 50 51 52 53 55 56
multiplication_expr (68)
    à gauche: 57 58 59, à droite: 54 55 56 58 59
prefix_op_expr (69)
    à gauche: 60 61 62 63 64 65, à droite: 57 58 59 61 62 63 64 65
postfix_op_expr (70)
    à gauche: 66 67 68 69 70 71, à droite: 60 67 68 69 70 71
call_arguments (71)
    à gauche: 72 73, à droite: 68 73
primary_expr (72)
    à gauche: 74 75 76, à droite: 66
static_value (73)
    à gauche: 77 78, à droite: 75


État 0

    0 $accept: . axiom $end

    PREPRODEFINE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 4 (preprocessor)

    axiom         aller à l'état 2
    file          aller à l'état 3
    preprocessor  aller à l'état 4


État 1

    5 preprocessor: PREPRODEFINE . preprocessor

    PREPRODEFINE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 4 (preprocessor)

    preprocessor  aller à l'état 5


État 2

    0 $accept: axiom . $end

    $end  décalage et aller à l'état 6


État 3

    1 axiom: file .

    $défaut  réduction par utilisation de la règle 1 (axiom)


État 4

    2 file: preprocessor . main EOFILE

    MAIN  décalage et aller à l'état 7

    main  aller à l'état 8


État 5

    5 preprocessor: PREPRODEFINE preprocessor .

    $défaut  réduction par utilisation de la règle 5 (preprocessor)


État 6

    0 $accept: axiom $end .

    $défaut  accepter


État 7

    3 main: MAIN . LBRACE instruction_list RBRACE

    LBRACE  décalage et aller à l'état 9


État 8

    2 file: preprocessor main . EOFILE

    EOFILE  décalage et aller à l'état 10


État 9

    3 main: MAIN LBRACE . instruction_list RBRACE

    TYPE_INT       décalage et aller à l'état 11
    TYPE_DOUBLE    décalage et aller à l'état 12
    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 15
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    RETURN         décalage et aller à l'état 21
    IF             décalage et aller à l'état 22
    WHILE          décalage et aller à l'état 23
    FOR            décalage et aller à l'état 24
    PRINTF         décalage et aller à l'état 25
    SEMICOLON      décalage et aller à l'état 26
    LPARENTHESIS   décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 9 (instruction_list)

    instruction_list     aller à l'état 28
    instruction          aller à l'état 29
    control_flow         aller à l'état 30
    for                  aller à l'état 31
    while                aller à l'état 32
    ifelse               aller à l'état 33
    if                   aller à l'état 34
    declaration_list     aller à l'état 35
    assignation_list     aller à l'état 36
    assignation          aller à l'état 37
    expression           aller à l'état 38
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 10

    2 file: preprocessor main EOFILE .

    $défaut  réduction par utilisation de la règle 2 (file)


État 11

   29 declaration_list: TYPE_INT . declaration_list2

    ID  décalage et aller à l'état 49

    declaration_list2  aller à l'état 50
    declaration        aller à l'état 51


État 12

   30 declaration_list: TYPE_DOUBLE . declaration_list2

    ID  décalage et aller à l'état 49

    declaration_list2  aller à l'état 52
    declaration        aller à l'état 51


État 13

   77 static_value: STATIC_INT .

    $défaut  réduction par utilisation de la règle 77 (static_value)


État 14

   78 static_value: STATIC_DOUBLE .

    $défaut  réduction par utilisation de la règle 78 (static_value)


État 15

   39 assignation: ID . EQUAL expression
   40            | ID . LBRACKET expression RBRACKET EQUAL expression
   74 primary_expr: ID .

    EQUAL     décalage et aller à l'état 53
    LBRACKET  décalage et aller à l'état 54

    LBRACKET  [réduction par utilisation de la règle 74 (primary_expr)]
    $défaut  réduction par utilisation de la règle 74 (primary_expr)


État 16

   61 prefix_op_expr: OP_PLUS . prefix_op_expr

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    prefix_op_expr   aller à l'état 56
    postfix_op_expr  aller à l'état 46
    primary_expr     aller à l'état 47
    static_value     aller à l'état 48


État 17

   62 prefix_op_expr: OP_MINUS . prefix_op_expr

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    prefix_op_expr   aller à l'état 57
    postfix_op_expr  aller à l'état 46
    primary_expr     aller à l'état 47
    static_value     aller à l'état 48


État 18

   63 prefix_op_expr: OP_INCREMENT . prefix_op_expr

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    prefix_op_expr   aller à l'état 58
    postfix_op_expr  aller à l'état 46
    primary_expr     aller à l'état 47
    static_value     aller à l'état 48


État 19

   64 prefix_op_expr: OP_DECREMENT . prefix_op_expr

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    prefix_op_expr   aller à l'état 59
    postfix_op_expr  aller à l'état 46
    primary_expr     aller à l'état 47
    static_value     aller à l'état 48


État 20

   65 prefix_op_expr: OP_NOT . prefix_op_expr

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    prefix_op_expr   aller à l'état 60
    postfix_op_expr  aller à l'état 46
    primary_expr     aller à l'état 47
    static_value     aller à l'état 48


État 21

   11 instruction: RETURN . expression SEMICOLON

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    expression           aller à l'état 61
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 22

   28 if: IF . LPARENTHESIS expression RPARENTHESIS instruction_block

    LPARENTHESIS  décalage et aller à l'état 62


État 23

   25 while: WHILE . LPARENTHESIS expression RPARENTHESIS instruction_block

    LPARENTHESIS  décalage et aller à l'état 63


État 24

   20 for: FOR . LPARENTHESIS for_init SEMICOLON for_expr SEMICOLON for_expr RPARENTHESIS instruction_block

    LPARENTHESIS  décalage et aller à l'état 64


État 25

   10 instruction: PRINTF . SEMICOLON

    SEMICOLON  décalage et aller à l'état 65


État 26

   16 instruction: SEMICOLON .

    $défaut  réduction par utilisation de la règle 16 (instruction)


État 27

   76 primary_expr: LPARENTHESIS . expression RPARENTHESIS

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    expression           aller à l'état 66
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 28

    3 main: MAIN LBRACE instruction_list . RBRACE

    RBRACE  décalage et aller à l'état 67


État 29

    8 instruction_list: instruction . instruction_list

    TYPE_INT       décalage et aller à l'état 11
    TYPE_DOUBLE    décalage et aller à l'état 12
    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 15
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    RETURN         décalage et aller à l'état 21
    IF             décalage et aller à l'état 22
    WHILE          décalage et aller à l'état 23
    FOR            décalage et aller à l'état 24
    PRINTF         décalage et aller à l'état 25
    SEMICOLON      décalage et aller à l'état 26
    LPARENTHESIS   décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 9 (instruction_list)

    instruction_list     aller à l'état 68
    instruction          aller à l'état 29
    control_flow         aller à l'état 30
    for                  aller à l'état 31
    while                aller à l'état 32
    ifelse               aller à l'état 33
    if                   aller à l'état 34
    declaration_list     aller à l'état 35
    assignation_list     aller à l'état 36
    assignation          aller à l'état 37
    expression           aller à l'état 38
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 30

   14 instruction: control_flow .

    $défaut  réduction par utilisation de la règle 14 (instruction)


État 31

   17 control_flow: for .

    $défaut  réduction par utilisation de la règle 17 (control_flow)


État 32

   18 control_flow: while .

    $défaut  réduction par utilisation de la règle 18 (control_flow)


État 33

   19 control_flow: ifelse .

    $défaut  réduction par utilisation de la règle 19 (control_flow)


État 34

   26 ifelse: if .
   27       | if . ELSE instruction_block

    ELSE  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 26 (ifelse)


État 35

   12 instruction: declaration_list . SEMICOLON

    SEMICOLON  décalage et aller à l'état 70


État 36

   13 instruction: assignation_list . SEMICOLON

    SEMICOLON  décalage et aller à l'état 71


État 37

   37 assignation_list: assignation . COMMA assignation_list
   38                 | assignation .

    COMMA  décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 38 (assignation_list)


État 38

   15 instruction: expression . SEMICOLON

    SEMICOLON  décalage et aller à l'état 73


État 39

   41 expression: or_expr .
   43 or_expr: or_expr . OP_OR and_expr

    OP_OR  décalage et aller à l'état 74

    $défaut  réduction par utilisation de la règle 41 (expression)


État 40

   42 or_expr: and_expr .
   45 and_expr: and_expr . OP_AND equality_expr

    OP_AND  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 42 (or_expr)


État 41

   44 and_expr: equality_expr .
   47 equality_expr: equality_expr . OP_EQ comparison_expr
   48              | equality_expr . OP_NEQ comparison_expr

    OP_EQ   décalage et aller à l'état 76
    OP_NEQ  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 44 (and_expr)


État 42

   46 equality_expr: comparison_expr .
   50 comparison_expr: comparison_expr . OP_LOWER addition_expr
   51                | comparison_expr . OP_LOWER_EQ addition_expr
   52                | comparison_expr . OP_GREATER addition_expr
   53                | comparison_expr . OP_GREATER_EQ addition_expr

    OP_LOWER       décalage et aller à l'état 78
    OP_LOWER_EQ    décalage et aller à l'état 79
    OP_GREATER     décalage et aller à l'état 80
    OP_GREATER_EQ  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 46 (equality_expr)


État 43

   49 comparison_expr: addition_expr .
   55 addition_expr: addition_expr . OP_PLUS multiplication_expr
   56              | addition_expr . OP_MINUS multiplication_expr

    OP_PLUS   décalage et aller à l'état 82
    OP_MINUS  décalage et aller à l'état 83

    $défaut  réduction par utilisation de la règle 49 (comparison_expr)


État 44

   54 addition_expr: multiplication_expr .
   58 multiplication_expr: multiplication_expr . OP_MULTIPLY prefix_op_expr
   59                    | multiplication_expr . OP_DIVIDE prefix_op_expr

    OP_MULTIPLY  décalage et aller à l'état 84
    OP_DIVIDE    décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 54 (addition_expr)


État 45

   57 multiplication_expr: prefix_op_expr .

    $défaut  réduction par utilisation de la règle 57 (multiplication_expr)


État 46

   60 prefix_op_expr: postfix_op_expr .
   67 postfix_op_expr: postfix_op_expr . LBRACKET expression RBRACKET
   68                | postfix_op_expr . LPARENTHESIS call_arguments RPARENTHESIS
   69                | postfix_op_expr . LPARENTHESIS RPARENTHESIS
   70                | postfix_op_expr . OP_INCREMENT
   71                | postfix_op_expr . OP_DECREMENT

    OP_INCREMENT  décalage et aller à l'état 86
    OP_DECREMENT  décalage et aller à l'état 87
    LPARENTHESIS  décalage et aller à l'état 88
    LBRACKET      décalage et aller à l'état 89

    $défaut  réduction par utilisation de la règle 60 (prefix_op_expr)


État 47

   66 postfix_op_expr: primary_expr .

    $défaut  réduction par utilisation de la règle 66 (postfix_op_expr)


État 48

   75 primary_expr: static_value .

    $défaut  réduction par utilisation de la règle 75 (primary_expr)


État 49

   33 declaration: ID .
   34            | ID . EQUAL expression
   35            | ID . LBRACKET STATIC_INT RBRACKET
   36            | ID . LBRACKET ID RBRACKET

    EQUAL     décalage et aller à l'état 90
    LBRACKET  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 33 (declaration)


État 50

   29 declaration_list: TYPE_INT declaration_list2 .

    $défaut  réduction par utilisation de la règle 29 (declaration_list)


État 51

   31 declaration_list2: declaration . COMMA declaration_list2
   32                  | declaration .

    COMMA  décalage et aller à l'état 92

    $défaut  réduction par utilisation de la règle 32 (declaration_list2)


État 52

   30 declaration_list: TYPE_DOUBLE declaration_list2 .

    $défaut  réduction par utilisation de la règle 30 (declaration_list)


État 53

   39 assignation: ID EQUAL . expression

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    expression           aller à l'état 93
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 54

   40 assignation: ID LBRACKET . expression RBRACKET EQUAL expression

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    expression           aller à l'état 94
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 55

   74 primary_expr: ID .

    $défaut  réduction par utilisation de la règle 74 (primary_expr)


État 56

   61 prefix_op_expr: OP_PLUS prefix_op_expr .

    $défaut  réduction par utilisation de la règle 61 (prefix_op_expr)


État 57

   62 prefix_op_expr: OP_MINUS prefix_op_expr .

    $défaut  réduction par utilisation de la règle 62 (prefix_op_expr)


État 58

   63 prefix_op_expr: OP_INCREMENT prefix_op_expr .

    $défaut  réduction par utilisation de la règle 63 (prefix_op_expr)


État 59

   64 prefix_op_expr: OP_DECREMENT prefix_op_expr .

    $défaut  réduction par utilisation de la règle 64 (prefix_op_expr)


État 60

   65 prefix_op_expr: OP_NOT prefix_op_expr .

    $défaut  réduction par utilisation de la règle 65 (prefix_op_expr)


État 61

   11 instruction: RETURN expression . SEMICOLON

    SEMICOLON  décalage et aller à l'état 95


État 62

   28 if: IF LPARENTHESIS . expression RPARENTHESIS instruction_block

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    expression           aller à l'état 96
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 63

   25 while: WHILE LPARENTHESIS . expression RPARENTHESIS instruction_block

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    expression           aller à l'état 97
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 64

   20 for: FOR LPARENTHESIS . for_init SEMICOLON for_expr SEMICOLON for_expr RPARENTHESIS instruction_block

    TYPE_INT     décalage et aller à l'état 11
    TYPE_DOUBLE  décalage et aller à l'état 12
    ID           décalage et aller à l'état 98

    for_init          aller à l'état 99
    declaration_list  aller à l'état 100
    assignation_list  aller à l'état 101
    assignation       aller à l'état 37


État 65

   10 instruction: PRINTF SEMICOLON .

    $défaut  réduction par utilisation de la règle 10 (instruction)


État 66

   76 primary_expr: LPARENTHESIS expression . RPARENTHESIS

    RPARENTHESIS  décalage et aller à l'état 102


État 67

    3 main: MAIN LBRACE instruction_list RBRACE .

    $défaut  réduction par utilisation de la règle 3 (main)


État 68

    8 instruction_list: instruction instruction_list .

    $défaut  réduction par utilisation de la règle 8 (instruction_list)


État 69

   27 ifelse: if ELSE . instruction_block

    TYPE_INT       décalage et aller à l'état 11
    TYPE_DOUBLE    décalage et aller à l'état 12
    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 15
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    RETURN         décalage et aller à l'état 21
    IF             décalage et aller à l'état 22
    WHILE          décalage et aller à l'état 23
    FOR            décalage et aller à l'état 24
    PRINTF         décalage et aller à l'état 25
    SEMICOLON      décalage et aller à l'état 26
    LPARENTHESIS   décalage et aller à l'état 27
    LBRACE         décalage et aller à l'état 103

    instruction_block    aller à l'état 104
    instruction          aller à l'état 105
    control_flow         aller à l'état 30
    for                  aller à l'état 31
    while                aller à l'état 32
    ifelse               aller à l'état 33
    if                   aller à l'état 34
    declaration_list     aller à l'état 35
    assignation_list     aller à l'état 36
    assignation          aller à l'état 37
    expression           aller à l'état 38
    or_expr              aller à l'état 39
    and_expr             aller à l'état 40
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 70

   12 instruction: declaration_list SEMICOLON .

    $défaut  réduction par utilisation de la règle 12 (instruction)


État 71

   13 instruction: assignation_list SEMICOLON .

    $défaut  réduction par utilisation de la règle 13 (instruction)


État 72

   37 assignation_list: assignation COMMA . assignation_list

    ID  décalage et aller à l'état 98

    assignation_list  aller à l'état 106
    assignation       aller à l'état 37


État 73

   15 instruction: expression SEMICOLON .

    $défaut  réduction par utilisation de la règle 15 (instruction)


État 74

   43 or_expr: or_expr OP_OR . and_expr

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    and_expr             aller à l'état 107
    equality_expr        aller à l'état 41
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 75

   45 and_expr: and_expr OP_AND . equality_expr

    STATIC_INT     décalage et aller à l'état 13
    STATIC_DOUBLE  décalage et aller à l'état 14
    ID             décalage et aller à l'état 55
    OP_PLUS        décalage et aller à l'état 16
    OP_MINUS       décalage et aller à l'état 17
    OP_INCREMENT   décalage et aller à l'état 18
    OP_DECREMENT   décalage et aller à l'état 19
    OP_NOT         décalage et aller à l'état 20
    LPARENTHESIS   décalage et aller à l'état 27

    equality_expr        aller à l'état 108
    comparison_expr      aller à l'état 42
    addition_expr        aller à l'état 43
    multiplication_expr  aller à l'état 44
    prefix_op_expr       aller à l'état 45
    postfix_op_expr      aller à l'état 46
    primary_expr         aller à l'état 47
    static_value         aller à l'état 48


État 76

   47 equality_expr: equality_expr OP_EQ . comparison_expr
